More archival updates

--- a/uid/rwd-school-of-rock/qa/index.html
+++ b/uid/rwd-school-of-rock/qa/index.html
@@ -1,6 +1,8 @@
 ---
 layout: rwd-school-of-rock
 title: QA Edition
+scripts: true
+section: qa
 ---
 
   <h2 class="subtitle">QA Edition</h2>
@@ -455,7 +457,7 @@ title: QA Edition
 
     <div class="video-container">
 
-      <iframe src="https://www.youtube.com/embed/fQ7thdnHBfs?rel=0&showinfo=0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/Ycu_usJ-jcU" allowfullscreen></iframe>
 
     </div>
 
