Add: School of Rock

--- a/uid/rwd-school-of-rock/creative/fall/week-2.html
+++ b/uid/rwd-school-of-rock/creative/fall/week-2.html
@@ -1,4 +1,9 @@
-{% block content %}
+---
+layout: rwd-school-of-rock
+title: "Creative Session: Fall 2013 - Week 2"
+scripts: true
+section: creative-fall-2013-week-2
+---
 
 <h2 class="subtitle">Fall Semester: 2013</h2>
 
@@ -11,8 +16,8 @@
 		<p>Designers don't also need to be developers, but it never hurts to have a baseline understanding of how a PSD becomes HTML. While PSDs are strutured with layers, HTML is structured with the DOM.</p>
 
 		<ul class="dom-images" role="presentation">
-			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="/img/don.jpg" alt="Don Vito Corleone"></a></li>
-			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="/img/dom.jpg" alt="DOM diagram"/></a></li>
+			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../img/don.jpg" alt="Don Vito Corleone"></a></li>
+			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../img/dom.jpg" alt="DOM diagram"/></a></li>
 		</ul>
 
 		<h3>Document Object Model</h3>
@@ -152,7 +157,7 @@ width: 100%;
 
 		<p>These diagrams, lovingly <a href="http://www.lukew.com/ff/entry.asp?1649">stolen from Luke Wroblewski</a>, illustrate the easiest and most difficult screen spaces for touch screen users to reach.</p>
 
-		<a href="/img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="/img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"/></a>
+		<a href="../../img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="/img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"/></a>
 
 		<span class="small-caption">(click the image to open in a new window)</span>
 
@@ -178,7 +183,7 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/AvcJu3CHar4?rel=0&showinfo=0" fallowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" fallowfullscreen></iframe>
 
 		</div>
 
@@ -244,7 +249,7 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/FpKJnbuWVW8?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/kOLOgYiWEzg?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
@@ -252,17 +257,13 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/7xkbFZAIj5A?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/59VTTPuOwtA?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
 	</div>
 
 </section>
-
-{% endblock %}
-
-{% block navigation %}
 
 <nav id="menu">
 
@@ -276,4 +277,3 @@ width: 100%;
 
 </nav>
 
-{% endblock %}
