--- a/uid/rwd-school-of-rock/creative/spring/week-2.html
+++ b/uid/rwd-school-of-rock/creative/spring/week-2.html
@@ -1,4 +1,9 @@
-{% block content %}
+---
+layout: rwd-school-of-rock
+title: "Creative Session: Sprint 2014 - Week 2"
+scripts: true
+section: creative-spring-2014-week-2
+---
 
 <h2 class="subtitle">Spring Semester: 2014</h2>
 
@@ -11,8 +16,8 @@
 		<p>Designers don't also need to be developers, but it never hurts to have a baseline understanding of how a PSD becomes HTML. While PSDs are strutured with layers, HTML is structured with the DOM.</p>
 
 		<ul class="dom-images" role="presentation">
-			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="/img/don.jpg" alt="Don Vito Corleone"></a></li>
-			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="/img/dom.jpg" alt="DOM diagram"/></a></li>
+			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../img/don.jpg" alt="Don Vito Corleone"></a></li>
+			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../img/dom.jpg" alt="DOM diagram"/></a></li>
 		</ul>
 
 		<h3>Document Object Model</h3>
@@ -84,7 +89,7 @@
 		<p>Two possible patterns:</p>
 
 		<ol>
-			<li><a href="/examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
+			<li><a href="../../examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
 
 				<ul>
 					<li>Accessed on tap of menu button on smaller screens, pushing main content off the screen or sitting on top of main content when open</li>
@@ -112,7 +117,7 @@
 
 		<p>These diagrams, lovingly <a href="http://www.lukew.com/ff/entry.asp?1649">stolen from Luke Wroblewski</a>, illustrate the easiest and most difficult screen spaces for touch screen users to reach.</p>
 
-		<a href="/img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="/img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"/></a>
+		<a href="../../img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="../../img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"/></a>
 
 		<span class="small-caption">(click the image to open in a new window)</span>
 
@@ -205,7 +210,7 @@
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/AvcJu3CHar4?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
@@ -271,17 +276,13 @@
 
 		<div class="video-container">
 
-			<iframe allowfullscreen="" src="http://www.youtube.com/embed/ehtCmfNg_AA?rel=0&amp;showinfo=0"></iframe>
+			<iframe allowfullscreen="" src="http://www.youtube.com/embed/DAXiiQGLbrw?rel=0&amp;showinfo=0"></iframe>
 
 		</div>
 
 	</div>
 
 </section>
-
-{% endblock %}
-
-{% block navigation %}
 
 <nav id="menu">
 
@@ -295,5 +296,3 @@
 	</ul>
 
 </nav>
-
-{% endblock %}
