--- a/uid/rwd-school-of-rock/qa/index.html
+++ b/uid/rwd-school-of-rock/qa/index.html
@@ -211,7 +211,7 @@ section: qa
 
       <p>Performance + Beauty = Overall User Experience</p>
 
-      <cite>Laura Swanson, Engineering Manager of Performance at Etsy (<a href="http://etsy.com">etsy.com</a>)</cite>
+      <cite>Lara Swanson, Engineering Manager of Performance at Etsy (<a href="http://etsy.com">etsy.com</a>)</cite>
 
     </blockquote>
 
@@ -457,7 +457,7 @@ section: qa
 
     <div class="video-container">
 
-      <iframe src="https://www.youtube.com/embed/Ycu_usJ-jcU" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/Ycu_usJ-jcU?rel=0&showinfo=0" allowfullscreen></iframe>
 
     </div>
 
@@ -465,7 +465,7 @@ section: qa
 
 </section>
 
-<!--nav id="menu">
+<nav id="menu">
 
   <ul class="nav">
     <li><a href="#overview">Overview</a></li>
@@ -477,6 +477,6 @@ section: qa
     <li><a href="#conclusion">Conclusion</a></li>
   </ul>
 
-</nav -->
+</nav>
 
 
