Ghetto HTTPS Redirect

--- a/uid/rwd-school-of-rock/creative/fall/week-2.html
+++ b/uid/rwd-school-of-rock/creative/fall/week-2.html
@@ -130,7 +130,7 @@ width: 100%;
 		<p>Two possible patterns:</p>
 
 		<ol>
-			<li><a href="/examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
+			<li><a href="../../examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
 
 				<ul>
 					<li>Accessed on tap of menu button on smaller screens, pushing main content off the screen or sitting on top of main content when open</li>
