--- a/uid/rwd-school-of-rock/creative/fall/week-1.html
+++ b/uid/rwd-school-of-rock/creative/fall/week-1.html
@@ -158,7 +158,7 @@ section: creative-fall-2013-week-1
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/xCX2rVnw9Uc?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/xCX2rVnw9Uc?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
@@ -166,7 +166,7 @@ section: creative-fall-2013-week-1
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/CIY8rHfNpZU?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/CIY8rHfNpZU?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
