--- a/uid/rwd-school-of-rock/creative/fall/week-2.html
+++ b/uid/rwd-school-of-rock/creative/fall/week-2.html
@@ -183,7 +183,7 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" fallowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
