--- a/uid/rwd-school-of-rock/creative/spring/week-2.html
+++ b/uid/rwd-school-of-rock/creative/spring/week-2.html
@@ -210,7 +210,7 @@ section: creative-spring-2014-week-2
 
 		<div class="video-container">
 
-			<iframe src="http://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" allowfullscreen></iframe>
 
 		</div>
 
