--- a/uid/rwd-school-of-rock/creative/spring/week-2.html
+++ b/uid/rwd-school-of-rock/creative/spring/week-2.html
@@ -276,7 +276,7 @@ section: creative-spring-2014-week-2
 
 		<div class="video-container">
 
-			<iframe allowfullscreen="" src="http://www.youtube.com/embed/DAXiiQGLbrw?rel=0&amp;showinfo=0"></iframe>
+			<iframe allowfullscreen="" src="https://www.youtube.com/embed/DAXiiQGLbrw?rel=0&amp;showinfo=0"></iframe>
 
 		</div>
 
