--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -19,13 +19,24 @@
 
     <h1>YouTube embed not working in iOS Safari and Chrome</h1>
 
-    <p>There appears to be a bug within some iOS browser where, under certain conditions, YouTube videos embedded within iframes cannot be viewed when the user clicks on the them.</p>p>
+    <p>There appears to be a bug within iOS webkit related browsers where, under certain conditions, YouTube videos embedded within iframes cannot be viewed when a user clicks on them. <em>Eep!</em></p>
 
-    <p>In our particular issue, the conditions had to be jusyt right. The "perfect storm" of bugs.</p>  
+    <p>In our particular instance, the conditions had to be just right. A "perfect storm" of bugs, if you will.</p>
 
-    <input type="search" placeholder="Search"/>
+    <p>Applying a universal selector to the <code>:active</code> pseudo-class with a declaration property of <code>-webkit-tap-highlight-color</code> seemed to be our culprit.</p> 
 
-    <br/><br/>
+<code><pre>
+
+*:active {
+-webkit-tap-highlight-color: <color>;
+}
+
+</pre></code>
+
+
+<hr/>
+
+
 
    <iframe src="https://www.youtube-nocookie.com/embed/ngElkyQ6Rhs?showinfo=0&controls=0" allowfullscreen title="Star Wars: Episode 7 - The Force Awakens Trailer"></iframe>
 
