--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -10,7 +10,7 @@
 
     <h1>YouTube embed not working in iOS Safari and Chrome (Fix)</h1>
 
-    <p><input type="text" placeholder="Search"/></p>
+    <p><input type="search" placeholder="Search"/></p>
 
     <iframe src="https://www.youtube-nocookie.com/embed/ngElkyQ6Rhs?showinfo=0&controls=0" allowfullscreen title="Star Wars: Episode 7 - The Force Awakens Trailer"></iframe>
 
