--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -8,7 +8,6 @@
     <style>
         
     *:active {
-    -webkit-tap-highlight-color: tomato;
     }
 
     </style>
@@ -17,7 +16,7 @@
 
 <body>
 
-    <h1>YouTube embed not working in iOS Safari and Chrome</h1>
+    <h1>YouTube embed not working in iOS Safari and Chrome (Fix)</h1>
 
     <p><input type="search" placeholder="Search"/></p>
 
