--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -7,8 +7,8 @@
 
     <style>
         
-    *:focus {
-    -webkit-tap-highlight-color: tomato;
+    *:active {
+   border: 1px red solid;
     }
 
     </style>
