--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <style>
+        
+    *:active {
+    /* -webkit-tap-highlight-color: tomato; */
+    }
+
+    </style>
+
 	<title>YouTube embed not working in iOS Safari and Chrome (Fix)</title>
 </head>
 
