--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -12,10 +12,12 @@
 
     </style>
 
-	<title>YouTube embed not working in iOS Safari and Chrome (Fix)</title>
+	<title>YouTube embed not working in iOS Safari and Chrome (Fix) - TMP Worldwide Development Blog</title>
 </head>
 
 <body>
+
+    <a href="/"><img class="logo" src="/assets/img/hdr-logo-wide.png" alt="TMP Worldwide, LLC"></a>
 
     <h1>YouTube embed not working in iOS Safari and Chrome (Fix)</h1>
 
@@ -23,7 +25,7 @@
 
     <p><b>iPhone 5s Model:</b> ME341LL/A <b>iOS Version:</b> 8.3 (12F0)</p>
 
-    <p>Here is the page without the webkit-tap-highlight-color property.</p>
+    <p>Here is the working video.  The page does not include the <code>webkit-tap-highlight-color</code> property.</p>
 
     <p><input type="search" placeholder="Search"/></p>
 
