--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -12,10 +12,12 @@
 
     </style>
 
-    <title>YouTube embed not working in iOS Safari and Chrome</title>
+    <title>YouTube embed not working in iOS Safari and Chrome (Fix) - TMP Worldwide Development Blog</title>
 </head>
 
 <body>
+
+    <a href="/"><img class="logo" src="/assets/img/hdr-logo-wide.png" alt="TMP Worldwide, LLC"></a>
 
     <h1>YouTube embed not working in iOS Safari and Chrome (Fix)</h1>
 
@@ -29,11 +31,11 @@
 
     <p>There appears to be a bug within iOS webkit related browsers where, under certain conditions, YouTube videos embedded within iframes cannot be viewed when a user clicks on the video. <em>Eep!</em></p>
 
-    <p>In our particular instance, the conditions had to be just right. A "perfect storm" of bugs, if you will. :)</p>
+    <p>In our particular instance, the conditions had to be just right. A "perfect storm" of issues, if you will. :)</p>
 
     <h2>The Bug</h2>
 
-    <p>Applying a universal selector to the <code>:active</code> pseudo-class with a declaration property of <code>-webkit-tap-highlight-color</code> seemed to be our culprit.</p> 
+    <p>Applying a universal selector to the <code>:active</code> pseudo-class with a property of <code>-webkit-tap-highlight-color</code> seemes to be our culprit.</p> 
 
 <code><pre>
 
@@ -53,7 +55,7 @@
 
     <h2>The Solution</h2>
 
-    <p>Either renaming the input type to "text" or removing <code>-webkit-tap-highlight-color</code> should alleviate the problem.</p>
+    <p>Either renaming the input type to "text" or removing <code>-webkit-tap-highlight-color</code> should alleviate the issue.</p>
 
     <p><a href="ios-tappy-bug-fix.html">Here is the page without the webkit-tap-highlight-color property.</a></p>
 
