--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -29,7 +29,7 @@
 
     <iframe src="https://www.youtube-nocookie.com/embed/ngElkyQ6Rhs?showinfo=0&amp;controls=0" allowfullscreen title="Star Wars: Episode 7 - The Force Awakens Trailer"></iframe>
 
-    <p>There appears to be a bug within iOS webkit related browsers where, under certain conditions, YouTube videos embedded within iframes cannot be viewed when a user clicks on the video. <em>Eep!</em></p>
+    <p>There appears to be a bug within iOS webkit (and blink) rendering engines. Under certain conditions, YouTube videos embedded within iframes cannot be viewed when a user clicks on the video. <em>Eep!</em></p>
 
     <p>In TMP's particular instance, the conditions had to be just right. A "perfect storm" of issues, if you will. :)</p>
 
