--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -12,7 +12,7 @@
 
     </style>
 
-	<title>YouTube embed not working in iOS Safari and Chrome (Fix) - TMP Worldwide Development Blog</title>
+	<title>YouTube embed not working in iOS 8 Safari and Chrome (Fix) - TMP Worldwide Development Blog</title>
 </head>
 
 <body>
