--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -35,7 +35,7 @@
 
     <h2>The Bug</h2>
 
-    <p>Applying a universal selector to the <code>:active</code> pseudo-class with a property of <code>-webkit-tap-highlight-color</code> seemes to be the culprit.</p> 
+    <p>Applying the <code>:active</code> pseudo-class to a universal selector (*) and including a property of <code>-webkit-tap-highlight-color</code> seemes to be the culprit.</p> 
 
 <code><pre>
 
