--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -45,7 +45,9 @@
 
 </pre></code>
 
-    <p>Now, here is the odd part. The bug is only triggered when the above CSS block is present <strong>and</strong> there is an <code>input</code> element present on the page with a type attribute value of "search". I know, crazy, right?</p>
+    <p>Now, here is the strange part. The bug is only triggered when the above CSS block is present <strong>and</strong> there is an <code>input</code> element present on the page with a type attribute value of "search". I know, crazy, right?</p>
+
+    <p>Another oddity here is that when you apply focus to the seach input, type something in, and then attempt to play video, it will then work.</p>
 
 <code><pre>
 
