Added Chrome version, typos

--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -25,7 +25,7 @@
 
     <p><b>iPhone 5s Model:</b> ME341LL/A <b>iOS Version:</b> 8.3 (12F0)</p>
 
-    <p>Here is the working video.  The page does not include the <code>webkit-tap-highlight-color</code> property.</p>
+    <p>Here is the working video. This page does not include the <code>webkit-tap-highlight-color</code> property.</p>
 
     <p><input type="search" placeholder="Search"/></p>
 
