--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -37,7 +37,7 @@
 
     <br/>
 
-    <img src="https://pbs.twimg.com/profile_images/542835522461130752/_Xd2Twta_200x200.jpeg" alt="Michael Spellacy" style="width: 100px; height: 100px; border-radius: 50%;">
+    <img src="https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e?s=200" alt="Michael Spellacy" style="width: 100px; height: 100px; border-radius: 50%;">
 
     <p>I am Michael "Spell" Spellacy, Director of User Interface Design and Development at <a href="http://www.tmp.com/">TMP Worldwide</a>. If you have any questions, feel free to contact me on <a href="https://github.com/michaelspellacy">Github</a> or follow me on <a href="https://twitter.com/spellacy">Twitter</a>.</p>
 
