--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -61,6 +61,8 @@
     <p>Another oddity here is that when you apply focus to the search input, type something in, and then attempt to play video, it will then work.</p>
 
     <h2>The Solution</h2>
+    
+    <p style="color: green;"></p>UPDATE! This issue has been fixed in iOS 9.3! No need to use recommended fix!</p>
 
     <p>Either renaming the input type to "text" or removing <code>-webkit-tap-highlight-color</code> (likely preferred solution) should alleviate the issue.</p>
 
