--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -29,7 +29,7 @@
         <b>Chrome Version:</b> 42.0.2311.47
     </p>
     
-    <p style="color: green;"></p>UPDATE! This issue has been fixed in iOS 9.3! No need to use recommended fix!</p>
+    <p style="color: green;">UPDATE! This issue has been fixed in iOS 9.3! No need to use recommended fix!</p>
 
     <p><input type="search" placeholder="Search"/></p>
 
