--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -66,7 +66,7 @@
 
  						">Themes &amp; Pages: Sort Pages By Name (v 1.0)</a>
 
-						<p>Sorts all pages within each theme, allows page name to be opened in new window, and appends URL to each row.</p>
+						<p>Sorts all pages within each theme, allows page name to be opened in new window, and appends clickable page URL to each row.</p>
 
 					</section>
 
