--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -21,7 +21,7 @@
 	text-decoration: none;
 	}
 	</style>
-	<title>TalentBrew Bookmarklets - TMP Worldwide</title>
+	<title>TalentBrew Admin Bookmarklets - TMP Worldwide</title>
 </head>
 
 <body id="twitter-feed">
@@ -40,7 +40,7 @@
 
 				<h1>TalentBrew Admin Bookmarklets</h1>
 
-				<p>An interium solution to dealing with some of the shortcomings of the Site Admin tool until proper enhancements are in place.</p>
+				<p>An interim solution to dealing with some of the shortcomings of the Site Admin tool until proper enhancements are in place.</p>
 
 				<h2>Instructions</h2>
 
