--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
@@ -24,7 +23,7 @@
 	<title>TalentBrew Admin Bookmarklets - TMP Worldwide</title>
 </head>
 
-<body id="twitter-feed">
+<body id="talentbrew-admin-bookmarklet">
 
 	<div class="page">
 
@@ -46,7 +45,6 @@
 
 				<p>Drag or right-click and add bookmarklet to your browser's bookmarks folder or bar, go to admin tool, navigate to desired section and access saved bookmark. <em>Magic.</em></p>
 
-				
 				<section id="themes-pages">
 
 					<h2>Themes &amp; Pages</h2>
@@ -83,7 +81,7 @@
  
  							}());
 
-						">Themes &amp; Pages: Highlight Page Types
+						">Themes &amp; Pages: Highlight Page Types (v 1.0)
 
 						</a>
 
