Separated Sort & Append URL Bookmarklets

--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -52,15 +52,23 @@
 
 					<section id="sort-pages-by-name">
 
-						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/sort-pages-by-name.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Sort Pages By Name (v 1.0)</a>
+						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/sort-pages-by-name.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Sort Pages By Name</a>
 
 						<p>Sorts all pages within each theme, allows page name to be opened in new window, and appends clickable page URL to each row.</p>
 
 					</section>
 
+					<section id="sort-pages-by-name">
+
+						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/append-url.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Append URL</a>
+
+						<p>Appends clickable page URL to each row in the list of pages.</p>
+
+					</section>
+
 					<section id="highlight-page-type">
 
-						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/highlight-page-type.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Highlight Page Types (v 1.0)</a>
+						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/highlight-page-type.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Highlight Page Types</a>
 
 						<p>Highlight groups of page types in each theme for easier viewing.</p>
 
