Adjusted description for Append URL functionality

--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -5,7 +5,6 @@
 	<meta name="robots" content="noindex, nofollow"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" href="https://services.tmpwebeng.com/tmp-styleguide/theme/waves/css/global.css"/>
-	<!-- link rel="stylesheet" href="http://192.168.1.149:8005/theme/waves/css/global.css"/-->
 	<script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
 	<style>
 	a.bookmarklet {
@@ -62,7 +61,7 @@
 
 						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/append-url.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Append URL</a>
 
-						<p>Appends clickable page URL to each row in the list of pages.</p>
+						<p>Appends clickable page URL to each row in the list of pages within a theme.</p>
 
 					</section>
 
@@ -128,7 +127,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://services.tmpwebeng.com/tmp-styleguide/theme/waves/js/global.js"></script>
-	<!-- script src="http://192.168.1.149:8005/theme/waves/js/global.js"></script -->
 
 </body>
 </html>
