--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -49,15 +49,7 @@
 
 					<h2>Themes &amp; Pages</h2>
 
-					<section id="sort-pages-by-name">
-
-						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/sort-pages-by-name.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Sort Pages By Name</a>
-
-						<p>Sorts all pages within each theme, allows page name to be opened in new window, and appends clickable page URL to each row.</p>
-
-					</section>
-
-					<section id="sort-pages-by-name">
+					<section id="append-url">
 
 						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/append-url.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Append URL</a>
 
@@ -70,6 +62,14 @@
 						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/highlight-page-type.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Highlight Page Types</a>
 
 						<p>Highlight groups of page types in each theme for easier viewing.</p>
+
+					</section>
+
+					<section id="sort-pages-by-name">
+
+						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/sort-pages-by-name.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Sort Pages By Name</a>
+
+						<p>Sorts all pages within each theme, allows page name to be opened in new window, and appends clickable page URL to each row.</p>
 
 					</section>
 
