--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -37,7 +37,7 @@
 
 			<article>
 
-				<h1>TalentBrew Admin Bookmarklets</h1>
+				<h1>TalentBrew Admin Plus</h1>
 
 				<p>An interim solution to dealing with some of the shortcomings of the Site Admin tool until proper enhancements are in place.</p>
 
@@ -69,7 +69,7 @@
 
 						<a class="bookmarklet" href="javascript:(function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://tmpworldwide.github.io/uid/bookmarklets/scripts/1.0/themes-pages/sort-pages-by-name.js'); document.body.appendChild(jsCode);}());">Themes &amp; Pages: Sort Pages By Name</a>
 
-						<p>Sorts all pages within each theme, allows page name to be opened in new window, and appends clickable page URL to each row.</p>
+						<p>Sorts all pages within each theme, allows page name to be opened in new window.</p>
 
 					</section>
 
