--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -20,7 +20,7 @@
 	text-decoration: none;
 	}
 	</style>
-	<title>TalentBrew Admin Bookmarklets - TMP Worldwide</title>
+	<title>TalentBrew Admin Plus - TMP Worldwide</title>
 </head>
 
 <body id="talentbrew-admin-bookmarklet">
