--- a/uid/bookmarklets/index.html
+++ b/uid/bookmarklets/index.html
@@ -23,7 +23,7 @@
 	<title>TalentBrew Admin Plus - TMP Worldwide</title>
 </head>
 
-<body id="talentbrew-admin-bookmarklet">
+<body id="talentbrew-admin-plus">
 
 	<div class="page">
 
