Added cross origin attribute

--- a/bugs/chrome-crossorigin.html
+++ b/bugs/chrome-crossorigin.html
@@ -24,7 +24,7 @@
 
     <h2>Issue:</h2>
 
-    <video preload="none" poster="https://tbcdn.talentbrew.com/company/3401/v1_0/media/case-study-microsoft.jpg" controls>
+    <video crossorigin="anonymous" preload="none" poster="https://tbcdn.talentbrew.com/company/3401/v1_0/media/case-study-microsoft.jpg" controls>
 
         <source src="https://tbcdn.talentbrew.com/company/3401/v1_0/media/case-study-microsoft.mp4" type="video/mp4">
         <track label="English" kind="subtitles" srclang="en" src="https://tbcdn.talentbrew.com/company/3401/v1_0/media/case-study-microsoft.en.vtt"/>
