--- a/bugs/chrome-crossorigin.html
+++ b/bugs/chrome-crossorigin.html
@@ -35,7 +35,7 @@
 
     <p>The poster image on a <code>video</code> element appears to be downloaded <strong>twice</strong> when a <code>crossorgin</code> attribute with a value of "anonymous" also exists on same element.</p>
 
-    <p>This attribute and value are required to get our video captioning to render.</p>
+    <p>This attribute and value are required to get our video captioning to render from our CDN.</p>
 
     <h2>Code</h2>
 
