--- a/uid/respond-ie8/index.html
+++ b/uid/respond-ie8/index.html
@@ -112,7 +112,7 @@
 			<section>
 				<div>
 					<h2>The solution:</h2>
-					<h3>Responsive development should not be considered part of <a href="http://www.tmp.com/web-standards/#limited-support">"limited support"</a> for Internet Explorer 8. New TalentBrew implementations should not behave responsively in that browser, or in any browser versions below it.</h3>
+					<h3>Responsive development should not be considered part of <a href="https://www.tmp.com/support/#limited-support">"limited support"</a> for Internet Explorer 8. New TalentBrew implementations should not behave responsively in that browser, or in any browser versions below it.</h3>
 					<ul>
 						<li>Content, and core functionality (such as job search on TalentBrew) will still be fully accessible to all users in all browsers.</li>
 						<li>Sites will render in the small screen/mobile layout in browsers that do not support responsive styles.</li>
@@ -189,7 +189,7 @@
 			</section>
 	</article>
 <script src="/js/ga.js"></script> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/global.js"></script>
 <!-- developed november 2013 by stephanie plumeri - web developer, baker of noms, casual economist -->
