--- a/uid/respond/index.html
+++ b/uid/respond/index.html
@@ -211,7 +211,7 @@
 			</section>
 	</article>
 <script src="/js/ga.js"></script> 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/global.min.js"></script>
 <!-- developed june 2013 by stephanie plumeri - web developer, baker of noms, casual economist -->
