--- a/bugs/chrome-crossorigin.html
+++ b/bugs/chrome-crossorigin.html
@@ -44,6 +44,12 @@ title: "Performance: Chrome Downloads 2 Poster Images When Crossorigin Attribute
 
 <p><a href="https://screencast.com/t/IAei3CZDJ" target="_blank">https://screencast.com/t/IAei3CZDJ</a></p>
 
+<h2>Reported</h2>
+
+<ul>
+	<li><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=650512">650512 - Performance: Chrome Downloads 2 Poster Images When Crossorigin Attribute (Anonymous) Present on Video</a></li>
+</ul>
+
 {% include bio-spell.html %}
 
 
