--- a/bugs/ios-tappy-bug-fix.html
+++ b/bugs/ios-tappy-bug-fix.html
@@ -19,5 +19,12 @@ title: "YouTube embed not working in iOS 8 Safari and Chrome (Fix)"
 
 <p><a href="ios-tappy-bug.html">View details of this issue.</a></p>
 
+<h2>Reported</h2>
+
+<ul>
+	<li><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=483025">483025 - YouTube embed not working in iOS 8 Safari and Chrome</a></li>
+	<li><a href="https://lists.webkit.org/pipermail/webkit-unassigned/2015-April/666489.html">[Webkit-unassigned] [Bug 144451] New: YouTube embed not working in iOS 8 Safari and Chrome</a></li>
+</ul>
+
 {% include bio-spell.html %}
 
