--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -51,4 +51,11 @@ title: "YouTube embed not working in iOS 8 Safari and Chrome"
 
 <p><a href="ios-tappy-bug-fix.html">Here is the page without the webkit-tap-highlight-color property.</a></p>
 
+<h2>Reported</h2>
+
+<ul>
+	<li><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=483025">483025 - YouTube embed not working in iOS 8 Safari and Chrome</a></li>
+	<li><a href="https://lists.webkit.org/pipermail/webkit-unassigned/2015-April/666489.html">[Webkit-unassigned] [Bug 144451] New: YouTube embed not working in iOS 8 Safari and Chrome</a></li>
+</ul>
+
 {% include bio-spell.html %} 
