--- a/code/att.html
+++ b/code/att.html
@@ -3,7 +3,10 @@ layout: default
 title: "Page Content Grabber"
 ---
 
+<style>a:visited {font-weight: bold;}</style>
+
 <h1>{{page.title}}</h1>
+
 
 <p>A little utility to grab needed content from a page via ajax calls. Handy and better than having to go to the SA tool to grab what you need.</p>
 
