--- a/code/att.html
+++ b/code/att.html
@@ -3,8 +3,6 @@ layout: default
 title: "Page Content Grabber"
 ---
 
-<style>a:visited {font-weight: bold;}</style>
-
 <h1>{{page.title}}</h1>
 
 
@@ -151,6 +149,8 @@ title: "Page Content Grabber"
 <script>
 
 $(".link-list a").on( "click", function() {
+
+	$(this).append(" - copied!");
 
 	var Path = $(this).attr("href");
 
